--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,20 @@
 
     You should have received a copy of the GNU General Public License
     along with OurVLE.  If not, see <http://www.gnu.org/licenses/>.
-    -->
+-->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.stoneapp.ourvlemoodle2"
     android:versionCode="9"
-    android:versionName="1.3.1" >
+    android:versionName="1.3.1">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -40,28 +40,22 @@
         android:icon="@drawable/ourvle_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:replace="icon, label" >
-
+        tools:replace="icon, label">
         <activity
             android:name=".activities.SignInActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateVisible|adjustResize" >
-        </activity>
-
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="orientation|screenSize" >
-        </activity>
-
+            android:configChanges="orientation|screenSize" />
         <activity
             android:name=".activities.BrowserActivity"
             android:configChanges="orientation|screenSize" />
-
         <activity
             android:name=".activities.CourseViewActivity"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
@@ -69,7 +63,6 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-
         <activity
             android:name=".activities.DiscussionActivity"
             android:configChanges="orientation|screenSize" />
@@ -80,15 +73,12 @@
         <meta-data
             android:name="DATABASE"
             android:value="ourvle.db" />
-
         <meta-data
             android:name="VERSION"
             android:value="5" />
-
         <meta-data
             android:name="QUERY_LOG"
             android:value="true" />
-
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.stoneapp.ourvlemoodle2" />
@@ -96,52 +86,61 @@
         <activity
             android:name=".activities.ProfileActivity"
             android:label="">
-            <!--android:label="@string/title_activity_profile" >-->
+
+            <!-- android:label="@string/title_activity_profile" > -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.stoneapp.ourvlemoodle2.activities.CourseViewActivity" />
         </activity>
-
         <activity
             android:name=".activities.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service
-            android:name="com.stoneapp.ourvlemoodle2.sync.AuthenticatorService">
+        <service android:name=".sync.AuthenticatorService">
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator"/>
+                <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
 
         <provider
-            android:name="com.stoneapp.ourvlemoodle2.sync.provider.StubProvider"
+            android:name=".sync.provider.StubProvider"
             android:authorities="com.stoneapp.ourvlemoodle2.provider"
             android:exported="false"
-            android:syncable="true"/>
+            android:syncable="true" />
 
         <service
             android:name=".sync.SyncService"
             android:exported="true"
             android:process=":sync">
             <intent-filter>
-                <action android:name="android.content.SyncAdapter"/>
+                <action android:name="android.content.SyncAdapter" />
             </intent-filter>
-            <meta-data android:name="android.content.SyncAdapter"
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter" />
         </service>
 
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name=".activities.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme" >
-        </activity>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.settings.SettingsNotifications"
+            android:label="Notification Settings" />
+        <activity
+            android:name=".activities.settings.SettingsSync"
+            android:label="Sync Settings" />
     </application>
+
 </manifest>
