--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    repositories {
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
 }
 
 dependencies {
@@ -47,4 +52,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.github.satyan:sugar:1.3'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
