--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <application
-        android:name="com.orm.SugarApp"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ourvle_icon"
         android:label="@string/app_name"
@@ -70,18 +70,6 @@
             android:name=".activities.PostActivity"
             android:configChanges="orientation|screenSize" />
 
-        <meta-data
-            android:name="DATABASE"
-            android:value="ourvle.db" />
-        <meta-data
-            android:name="VERSION"
-            android:value="5" />
-        <meta-data
-            android:name="QUERY_LOG"
-            android:value="true" />
-        <meta-data
-            android:name="DOMAIN_PACKAGE_NAME"
-            android:value="com.stoneapp.ourvlemoodle2" />
 
         <activity
             android:name=".activities.ProfileActivity"
@@ -141,6 +129,9 @@
         <activity
             android:name=".activities.settings.SettingsSync"
             android:label="Sync Settings" />
+
+        <meta-data android:name="AA_DB_NAME" android:value="ourvlenew.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="5" />
     </application>
 
 </manifest>
