--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,14 +19,21 @@
 
 apply plugin: 'com.android.application'
 
+
+ext {
+    supportLibVersion = "25.1.0"
+}
+
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.stoneapp.ourvlemoodle2"
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion 16
+        targetSdkVersion 25
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -44,13 +51,15 @@ android {
 
 dependencies {
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:palette-v7:${supportLibVersion}"
+    compile "com.android.support:support-v4:${supportLibVersion}"
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.github.satyan:sugar:1.3'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    testCompile 'junit:junit:4.12'
 }
