--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.stoneapp.ourvlemoodle2"
-    android:versionCode="11"
-    android:versionName="1.5">
+    android:versionCode="12"
+    android:versionName="1.5.1">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -140,7 +140,7 @@
             android:name=".activities.settings.SettingsSync"
             android:label="Sync Settings" />
 
-        <meta-data android:name="AA_DB_NAME" android:value="ourvlenew.db" />
+        <meta-data android:name="AA_DB_NAME" android:value="ourvlenew2.db" />
         <meta-data android:name="AA_DB_VERSION" android:value="5" />
         <meta-data
             android:name="AA_MODELS"
