Style Floating Text Input Labels' Colour
The AppCompat default colour has finally been replaced with white.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         </provider>
         <activity
             android:name=".activities.SignInActivity"
+            android:theme="@style/SignInActivityTheme"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateVisible|adjustResize" />
